plugins/formal-verification/testData/diagnostics/no_contracts/recursion.kt
fun <!VIPER_TEXT!>recursive<!>(): Unit = recursive()